--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,21 @@
 {
     "name": "Flappy Bird",
     "description": "Flappy Bird popup game in browser",
-    "version": "1.17.0",
+    "version": "1.0.0",
     "manifest_version": 3,
     "permissions": [],
     "action": {
         "default_popup": "popup.html",
         "default_icon": "icon128.jpg",
         "icons": {
-            "16": "icon16.jpg",
-            "48": "icon48.jpg",
-            "128": "icon128.jpg"
+            "16": "icon16.png",
+            "48": "icon48.png",
+            "128": "icon128.png"
         }
     },
     "icons": {
-        "16": "icon16.jpg",
-        "48": "icon48.jpg",
-        "128": "icon128.jpg"
+        "16": "icon16.png",
+        "48": "icon48.png",
+        "128": "icon128.png"
     }
 }
